fix: table css on small screens

--- a/tools/theme/css/lottie-theme.css
+++ b/tools/theme/css/lottie-theme.css
@@ -115,3 +115,9 @@ a:hover {
 code {
   white-space: normal;
 }
+
+table {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
